fix(ui): Fix Context Picker modal overflow (#8670)
Currently the Context Picker Modal body has `overflow: hidden`, it can hide `react-select` dropdowns.

--- a/src/sentry/static/sentry/less/shared-components.less
+++ b/src/sentry/static/sentry/less/shared-components.less
@@ -2776,6 +2776,12 @@ ul.radio-inputs {
   }
 }
 
+.context-picker-modal.modal {
+  .modal-content {
+    overflow: visible;
+  }
+}
+
 // Broadcast Modal
 
 .modal-broadcast {
